# Cpp-project

./: CMakeLists.txt  Taccountant.cpp  Taccountant.h  Tadministrator.cpp  Tadministrator.h  Tanalyst.cpp  Tanalyst.h  Tprogrammer.cpp  Tprogrammer.h  Ttrainee.cpp  Ttrainee.h  Tworker.cpp  Tworker.h  main.cpp  stdin.txt  temat2.txt
