cmake_minimum_required(VERSION 3.20)
project(HanuszKamila-etap2)

set(CMAKE_CXX_STANDARD 14)

add_executable(HanuszKamila-etap2 main.cpp Tworker.cpp Tworker.h Ttrainee.cpp Ttrainee.h Tprogrammer.cpp Tprogrammer.h Tanalyst.cpp Tanalyst.h Tadministrator.cpp Tadministrator.h Taccountant.cpp Taccountant.h)
